# aegis

./: .env.example  .gitignore  Dockerfile  Dockerfile.python  LICENSE  README.md  docker-compose.yml  pyproject.toml  railway.toml  render.yaml
aegis/: config.py  observability.py  store.py
aegis/agents/: attacker.py  evaluator.py  planner.py  recon.py
aegis/api/: server.py
aegis/attacks/: library.py
aegis/auth/: context.py  scope.py  targets.py  users.py
aegis/graph/: build.py  state.py
aegis/llm/: __init__.py  factory.py
aegis/mcp_servers/: payload_library.py  report_writer.py  target_connector.py
aegis/report/: generator.py  remediations.py
aegis/report/templates/: report.html.j2
aegis/targets/: client.py  generic.py  hr_assistant.py  hr_docs.py
aegis/websec/: scanner.py  ws_scanner.py
dashboard/: Dockerfile  index.html
dashboard/src/lib/: api.ts
dashboard/src/pages/: Home.tsx
dashboard/src/sections/: AttemptTimeline.tsx  AuthGate.tsx  ComparePanel.tsx  FindingCard.tsx  ProviderSettings.tsx  ScanLauncher.tsx  TargetsPanel.tsx
dashboard/src/types/: scan.ts
deploy/: nginx.conf  start.sh
docs/: DEPLOY.md  exemple-rapport-audit.html  rapport-readplay-fr.html
scripts/: run_demo.sh
tests/: conftest.py  test_api.py  test_auth_byok.py  test_generic_target.py  test_graph_e2e.py  test_kimi_provider.py  test_mcp.py  test_report.py  test_smoke_graph.py  test_target.py  test_target_verification.py  test_unreachable.py  test_websec.py  test_zero_ai.py
