[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis"
version = "0.1.0"
description = "Aegis — automated multi-agent red team for LLM applications"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "langchain-anthropic>=0.3",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "jinja2>=3.1",
    "langchain-ollama>=0.2",
    "mcp>=1.0",
    "langfuse>=2.0",
    "pyjwt>=2.8",
    "bcrypt>=4.0",
    "cryptography>=42.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.8"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
include = ["aegis*"]
